--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,21 @@ body {
 }
 
 /* Shopping Cart */
+#shopping-cart-button{
+  position: relative;
+}
+
+#shopping-cart-button .quantity-badge{
+  display: inline-block;
+  padding: 1px 5px;
+  background-color: red;
+  border-radius: 6px;
+  font-size: .8rem;
+  position: absolute;
+  top: 0;
+  right: -10px;
+}
+
 .shopping-cart {
   position: absolute;
   top: 100%;
@@ -400,12 +415,6 @@ body {
 .products .product-price {
   font-size: 1.3rem;
   font-weight: bold;
-}
-
-.products .product-price span {
-  text-decoration: line-through;
-  font-weight: lighter;
-  font-size: 1rem;
 }
 
 /* Contact Section */
